[tool.poetry]
name = "request-identifier"
version = "0.1.0"
description = ""
authors = ["Ilkka Kivistö <ilkka.kivisto@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "request_identifier"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
